--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit
-pandas
-joblib
-scikit-learn
-xgboost
+streamlit==1.52.0
+pandas==2.3.3
+scikit-learn==1.6.1
+xgboost==3.1.2
+joblib==1.5.2
+
+
